--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "http-status": "^1.3.2",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^5.15.3"
