Fix main package-json root

--- a/package.json
+++ b/package.json
@@ -1,39 +1,29 @@
 {
   "name": "glide-frontend-challenge",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
-  },
+  "version": "1.0.0",
+  "description": "This is the code challenge for applying to FWI's FE Developer Position.",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start-server": "yarn workspace server start",
+    "start-client": "yarn workspace client start",
+    "start": "npm-run-all -p start-server start-client"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3"
+    "lint-staged": "^8.1.5",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.16.4"
+  },
+  "engines": {
+    "node": ">=8.10.0"
+  },
+  "workspaces": [
+    "client/",
+    "server/"
+  ],
+  "lint-staged": {
+    "client/src/**/*.{js,jsx,ts,tsx,scss}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
